# autolazy

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.md  guide.md
src/autolazy/: __init__.py
tests/: conftest.py  test_lazy_attach.py  test_parse_all.py
